<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="collar_name" translatable="false">Collar</string>
    <string name="collar_search">Search</string>
    <string name="collar_clear">Clear</string>
    <string name="collar_filter">Filter</string>
    <string name="collar_screens">Screens</string>
    <string name="collar_events">Events</string>
    <string name="collar_properties">Properties</string>
    <string name="collar_sent_at">Sent at</string>
    <string name="collar_name_caption">Name</string>
    <string name="collar_value">Value</string>
    <string name="collar_parameters">Parameters</string>
    <string name="collar_share">Share</string>
    <string name="collar_open">Open</string>
    <string name="collar_apply">Apply</string>
    <string name="collar_settings">Settings</string>
    <string name="collar_notifications_system">System notifications</string>
    <string name="collar_notifications_inapp">In app notifications</string>
    <string name="collar_empty">No analytics have been collected.</string>
    <string name="collar_check_setup">How to setup</string>
    <string name="collar_check_setup_link">https://github.com/infinum/android-collar/blob/master/README.md#getting-started</string>
    <string name="collar_collection_disabled">Analytics collection is disabled</string>
    <string name="collar_collection_disabled_content_description">Collection disabled warning</string>
</resources>