<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <com.google.android.material.textview.MaterialTextView
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|start"
        android:maxLines="1"
        android:text="@string/collar_sent_at" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/timeView"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|start"
        tools:text="01.03.2020. 11:55:55" />

    <com.google.android.material.textview.MaterialTextView
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical|start"
        android:maxLines="1"
        android:text="@string/collar_name_caption" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/nameView"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|start"
        tools:text="event4" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/valueCaptionView"
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical|start"
        android:maxLines="1"
        android:visibility="gone"
        tools:text="@string/collar_parameters"
        tools:visibility="visible" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/valueView"
        style="@style/TextAppearance.MaterialComponents.Body2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|start"
        android:visibility="gone"
        tools:text="Java"
        tools:visibility="visible" />

</LinearLayout>