<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?colorSurface"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/collar_detail_menu"
            app:navigationIcon="@drawable/collar_ic_close"
            app:titleCentered="true" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/contentView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <ImageView
                android:id="@+id/iconView"
                android:layout_width="?attr/listPreferredItemHeightSmall"
                android:layout_height="?attr/listPreferredItemHeightSmall"
                android:layout_gravity="center_horizontal"
                android:importantForAccessibility="no" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextAppearance.MaterialComponents.Caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|start"
                android:maxLines="1"
                android:text="@string/collar_sent_at" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/timeView"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|start"
                tools:text="01.03.2020. 11:55:55" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextAppearance.MaterialComponents.Caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical|start"
                android:maxLines="1"
                android:text="@string/collar_name_caption" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/nameView"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|start"
                tools:text="event4" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/valueCaptionView"
                style="@style/TextAppearance.MaterialComponents.Caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical|start"
                android:maxLines="1"
                android:visibility="gone"
                tools:text="@string/collar_parameters"
                tools:visibility="visible" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/valueView"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|start"
                android:visibility="gone"
                tools:text="Java"
                tools:visibility="visible" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>